# sacnold_candidate_tracker

./: LICENSE  README.md  pyproject.toml  streamlit_app.py  submission_metadata.yaml
config/: jd_criteria.json
data/: submission.csv
scripts/: rank.py
src/sacnold/: __init__.py  constants.py  utils.py
src/sacnold/config/: loader.py
src/sacnold/core/: models.py
src/sacnold/detection/: honeypot.py
src/sacnold/io/: reader.py  writer.py
src/sacnold/lexicons/: skill_aliases.py
src/sacnold/nlp/: retrieval.py  tokenizer.py
src/sacnold/pipeline/: ranker.py
src/sacnold/reasoning/: generator.py
src/sacnold/scoring/: behavioral.py  career.py  experience.py  penalties.py  skills.py
